<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sandy.securitymanagement.activity.ForgotPasswordActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_forgot"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary" />

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15sp"
    android:layout_marginTop="25dp"
    tools:context="com.example.sandy.securitymanagement.activity.ForgotPasswordActivity">


    <TextView
        android:id="@+id/textView_forgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp"
        android:text="@string/trouble_logging_in"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

    <TextView
        android:text="@string/enter_your_username_to_forgot_password"
        android:layout_width="match_parent"
        android:textSize="20sp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView_forgot"
        android:layout_marginTop="29dp"
        android:id="@+id/textView2" />

    <EditText
        android:id="@+id/username_forgot"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_above="@+id/enter_forgot_password"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:enabled="false"
        android:gravity="center"
        android:hint="@string/username_mobile"
        android:inputType="text"
        android:background="@drawable/edittextborder"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

    <EditText
        android:id="@+id/enter_forgot_password"
        android:background="@drawable/edittextborder"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:hint="@string/new_password"
        android:inputType="textPassword"/>

    <EditText
        android:background="@drawable/edittextborder"
        android:id="@+id/confirm_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/enter_forgot_password"
        android:layout_marginTop="27dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button_reset_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirm_forgot_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_drawable"
        android:text="@string/reset" />

</RelativeLayout>

</RelativeLayout>
